--- a/Pic2Map/.gitignore
+++ b/Pic2Map/.gitignore
@@ -1,22 +1,7 @@
-# python byte code files
-*.pyc
+*.py[wco]
+**/.py[wco]
 
-/bin
-/include
-/lib
-/local
-/ui/resources_rc.py
-/ui/ui_*.py
-./dialogs.ini
-
-
-# deployment archives
-/*.zip
 
 # text editors temporary files
 *.swp
 *~
-
-# nose testing output
-/.coverage
-/.noseids
