--- a/Pic2Map/Makefile
+++ b/Pic2Map/Makefile
@@ -1,12 +1,12 @@
 #/***************************************************************************
-# DPFEPlugin
+# PLCS
 #
-# Gestion des permis de fouilles 
+# piecewise linear contrast stretch
 #							 -------------------
-#		begin				: 2014-09-24
+#		begin				: 2015-01-20
 #		git sha				: $Format:%H$
-#		copyright			: (C) 2014 by Camptocamp SA
-#		email				: info@camptocamp.com
+#		copyright			: (C) 2015 by gillian milani
+#		email				: gillian.milani@romandie.com
 # ***************************************************************************/
 #
 #/***************************************************************************
@@ -18,52 +18,64 @@
 # *																		 *
 # ***************************************************************************/
 
-###################CONFIGURE HERE########################
-PLUGINNAME = Pic2Map
-PACKAGES_NO_UI = core widgets
-PACKAGES = $(PACKAGES_NO_UI) ui
-TRANSLATIONS = DPFE_fr.ts
+#################################################
+# Edit the following to match your sources lists
+#################################################
 
-#this can be overiden by calling QGIS_PREFIX_PATH=/my/path make
-# DEFAULT_QGIS_PREFIX_PATH=/usr/local/qgis-master
-DEFAULT_QGIS_PREFIX_PATH=/usr
-###################END CONFIGURE#########################
 
-PACKAGESSOURCES := $(shell find $(PACKAGES) -name "*.py")
-SOURCES := dpfe_plugin.py $(PACKAGESSOURCES)
+#Add iso code for any locales you want to support here (space separated)
+# default is no locales
+# LOCALES = af
+LOCALES =
 
-# QGIS PATHS
-ifndef QGIS_PREFIX_PATH
-export QGIS_PREFIX_PATH=$(DEFAULT_QGIS_PREFIX_PATH)
-endif
+# If locales are enabled, set the name of the lrelease binary on your system. If
+# you have trouble compiling the translations, you may have to specify the full path to
+# lrelease
+#LRELEASE = lrelease
+#LRELEASE = lrelease-qt4
 
-export LD_LIBRARY_PATH:="$(QGIS_PREFIX_PATH)/lib:$(LD_LIBRARY_PATH)"
-export PYTHONPATH:=$(PYTHONPATH):$(QGIS_PREFIX_PATH)/share/qgis/python:$(HOME)/.qgis2/python/plugins:$(CURDIR)/..:$(CURDIR)/lib/python2.7/site-packages/
-export PYTHONPATH:=$(PYTHONPATH):$(CURDIR)/test  # PG
 
-ifndef QGIS_DEBUG
-# Default to Quiet version
-export QGIS_DEBUG=0
-export QGIS_LOG_FILE=/dev/null
-export QGIS_DEBUG_FILE=/dev/null
-endif
+# translation
+SOURCES = \
+	__init__.py \
+
+PLUGINNAME = PLCS
+
+PY_FILES = \
+	plcs.py \
+	plcs_dialog.py \
+	__init__.py
+
+UI_FILES = ui/*.ui
+
+EXTRAS = icon.png metadata.txt
+
+COMPILED_RESOURCE_FILES = resources_rc.py
+
+PEP8EXCLUDE=pydev,resources_rc.py,conf.py,third_party,ui
+
+
+#################################################
+# Normally you would not need to edit below here
+#################################################
+
+HELP = help/build/html
+
+PLUGIN_UPLOAD = $(c)/plugin_upload.py
+
+RESOURCE_SRC=$(shell grep '^ *<file' resources.qrc | sed 's@</file>@@g;s/.*>//g' | tr '\n' ' ')
+
+QGISDIR=.qgis2
 
 default: compile
-.PHONY: clean transclean deploy doc help
 
-help:
-	@echo
-	@echo "------------------"
-	@echo "Available commands"
-	@echo "------------------"
-	@echo
-	@echo 'make [compile]'
-	@echo 'make clean'
-	@echo 'make test'
-	@echo 'make package VERSION=\<version\> HASH=\<hash\>'
-	@echo 'make deploy'
-	@echo 'make stylecheck|pep8|pylint'
-	@echo 'make help'
+compile: $(COMPILED_RESOURCE_FILES)
+	make -C uis
+%_rc.py : %.qrc $(RESOURCES_SRC)
+	pyrcc4 -o $*_rc.py  $<
+
+%.qm : %.ts
+	$(LRELEASE) $<
 
 test: compile transcompile
 	@echo
@@ -82,96 +94,131 @@ test: compile transcompile
 	@echo "the helper script we have provided first then run make test."
 	@echo "e.g. source run-env-linux.sh <path to qgis install>; make test"
 	@echo "----------------------"
-	
-################COMPILE#######################
-compile:
+
+deploy: compile doc transcompile
 	@echo
-	@echo "------------------------------"
-	@echo "Compile ui and resources forms"
-	@echo "------------------------------"
-	make -C help/ html
-	#make -C doc/dev api
-	#make -C doc/dev html
+	@echo "------------------------------------------"
+	@echo "Deploying plugin to your .qgis2 directory."
+	@echo "------------------------------------------"
+	# The deploy  target only works on unix like operating system where
+	# the Python plugin directory is located at:
+	# $HOME/$(QGISDIR)/python/plugins
+	mkdir -p $(HOME)/$(QGISDIR)/python/plugins/$(PLUGINNAME)
+	cp -vf $(PY_FILES) $(HOME)/$(QGISDIR)/python/plugins/$(PLUGINNAME)
+	cp -vf $(UI_FILES) $(HOME)/$(QGISDIR)/python/plugins/$(PLUGINNAME)
+	cp -vf $(COMPILED_RESOURCE_FILES) $(HOME)/$(QGISDIR)/python/plugins/$(PLUGINNAME)
+	cp -vf $(EXTRAS) $(HOME)/$(QGISDIR)/python/plugins/$(PLUGINNAME)
+	cp -vfr i18n $(HOME)/$(QGISDIR)/python/plugins/$(PLUGINNAME)
+	cp -vfr $(HELP) $(HOME)/$(QGISDIR)/python/plugins/$(PLUGINNAME)/help
 
-################CLEAN#######################
-clean:
+# The dclean target removes compiled python files from plugin directory
+# also deletes any .git entry
+dclean:
 	@echo
-	@echo "------------------------------"
-	@echo "Clean ui and resources forms"
-	@echo "------------------------------"
-	rm -rf bin include lib local
-	rm -f *.pyc
-	make clean -C ui
-	make clean -C resources
-	make clean -C doc/user
-	#make clean -C doc/dev
+	@echo "-----------------------------------"
+	@echo "Removing any compiled python files."
+	@echo "-----------------------------------"
+	find $(HOME)/$(QGISDIR)/python/plugins/$(PLUGINNAME) -iname "*.pyc" -delete
+	find $(HOME)/$(QGISDIR)/python/plugins/$(PLUGINNAME) -iname ".git" -prune -exec rm -Rf {} \;
 
-################TESTS#######################
-.ONESHELL:
-tests:
-	@echo "------------------------------"
-	@echo "Running test suite"
-	@echo "------------------------------"
-	export LD_LIBRARY_PATH=$(LD_LIBRARY_PATH)
-	export PYTHONPATH=$(PYTHONPATH)
-	./bin/pip install -q mock coverage
-	unset GREP_OPTIONS
-	nosetests -v test --nocapture --with-id --with-coverage --cover-package=$(PLUGINNAME) 3>&1 1>&2 2>&3 3>&- | \grep -v "^Object::" || true
 
-################DOCS#######################
-# build documentation with sphinx
-doc:
-	make -C doc/user html
-	#make -C doc/dev api
-	#make -C doc/dev html
+derase:
+	@echo
+	@echo "-------------------------"
+	@echo "Removing deployed plugin."
+	@echo "-------------------------"
+	rm -Rf $(HOME)/$(QGISDIR)/python/plugins/$(PLUGINNAME)
 
-################PACKAGE############################
-# Create a zip package of the plugin named $(PLUGINNAME).zip.
-# This requires use of git (your plugin development directory must be a
-# git repository).
-# To use, pass a valid commit or tag as follows:
-#   make package VERSION=0.3.2 HASH=release-0.3.2
-#   make package VERSION=0.3.2 HASH=master
-#   make package VERSION=0.3.2 HASH=83c34c7d
+zip: deploy dclean
+	@echo
+	@echo "---------------------------"
+	@echo "Creating plugin zip bundle."
+	@echo "---------------------------"
+	# The zip target deploys the plugin and creates a zip file with the deployed
+	# content. You can then upload the zip file on http://plugins.qgis.org
+	rm -f $(PLUGINNAME).zip
+	cd $(HOME)/$(QGISDIR)/python/plugins; zip -9r $(CURDIR)/$(PLUGINNAME).zip $(PLUGINNAME)
 
 package: compile
+	# Create a zip package of the plugin named $(PLUGINNAME).zip.
+	# This requires use of git (your plugin development directory must be a
+	# git repository).
+	# To use, pass a valid commit or tag as follows:
+	#   make package VERSION=Version_0.3.2
+	@echo
+	@echo "------------------------------------"
+	@echo "Exporting plugin to zip package.	"
+	@echo "------------------------------------"
 	rm -f $(PLUGINNAME).zip
-	rm -rf $(PLUGINNAME)/
-	#mkdir -p $(PLUGINNAME)/ui/
-	mkdir -p $(PLUGINNAME)/help/build
-	#cp -r lib/ $(PLUGINNAME)/
-	#cp ui/*.py $(PLUGINNAME)/ui/
-	cp -r help/build/html/ $(PLUGINNAME)/help/build/
-	git archive -o $(PLUGINNAME).zip --prefix=$(PLUGINNAME)/ $(HASH)
-	zip -d $(PLUGINNAME).zip $(PLUGINNAME)/\*Makefile
-	zip -d $(PLUGINNAME).zip $(PLUGINNAME)/.gitignore
-	zip -g $(PLUGINNAME).zip $(PLUGINNAME)/*/*
-	zip -g $(PLUGINNAME).zip `find $(PLUGINNAME)/help/build/html`
-	rm -rf $(PLUGINNAME)/
-	mv $(PLUGINNAME).zip $(PLUGINNAME).$(VERSION).zip
-	echo "Created package: $(PLUGINNAME).$(VERSION).zip"
+	git archive --prefix=$(PLUGINNAME)/ -o $(PLUGINNAME).zip $(VERSION)
+	echo "Created package: $(PLUGINNAME).zip"
 
+upload: zip
+	@echo
+	@echo "-------------------------------------"
+	@echo "Uploading plugin to QGIS Plugin repo."
+	@echo "-------------------------------------"
+	$(PLUGIN_UPLOAD) $(PLUGINNAME).zip
 
-################VALIDATION#######################
-# validate syntax style
-stylecheck: pep8 pylint
+transup:
+	@echo
+	@echo "------------------------------------------------"
+	@echo "Updating translation files with any new strings."
+	@echo "------------------------------------------------"
+	@chmod +x scripts/update-strings.sh
+	@scripts/update-strings.sh $(LOCALES)
 
-.ONESHELL:
+transcompile:
+	@echo
+	@echo "----------------------------------------"
+	@echo "Compiled translation files to .qm files."
+	@echo "----------------------------------------"
+	@chmod +x scripts/compile-strings.sh
+	@scripts/compile-strings.sh $(LRELEASE) $(LOCALES)
+
+transclean:
+	@echo
+	@echo "------------------------------------"
+	@echo "Removing compiled translation files."
+	@echo "------------------------------------"
+	rm -f i18n/*.qm
+
+clean:
+	@echo
+	@echo "------------------------------------"
+	@echo "Removing uic and rcc generated files"
+	@echo "------------------------------------"
+	rm $(COMPILED_UI_FILES) $(COMPILED_RESOURCE_FILES)
+
+doc:
+	@echo
+	@echo "------------------------------------"
+	@echo "Building documentation using sphinx."
+	@echo "------------------------------------"
+	cd help; make html
+
 pylint:
 	@echo
 	@echo "-----------------"
 	@echo "Pylint violations"
 	@echo "-----------------"
-	@./bin/pip install -q pylint
-	@export LD_LIBRARY_PATH=$(LD_LIBRARY_PATH)
-	@export PYTHONPATH=$(PYTHONPATH)
-	# @./bin/pylint --output-format=parseable --reports=y --rcfile=pylintrc $(PACKAGES_NO_UI) || true
-	@./bin/pylint --reports=y --rcfile=pylintrc $(PACKAGES_NO_UI) || true
+	@pylint --reports=n --rcfile=pylintrc . || true
+	@echo
+	@echo "----------------------"
+	@echo "If you get a 'no module named qgis.core' error, try sourcing"
+	@echo "the helper script we have provided first then run make pylint."
+	@echo "e.g. source run-env-linux.sh <path to qgis install>; make pylint"
+	@echo "----------------------"
 
+
+# Run pep8 style checking
+#http://pypi.python.org/pypi/pep8
 pep8:
 	@echo
 	@echo "-----------"
 	@echo "PEP8 issues"
 	@echo "-----------"
-	@./bin/pip install -q pep8
-	@./bin/pep8 --repeat --ignore=E501 --exclude ui,lib,doc resources . || true
+	@pep8 --repeat --ignore=E203,E121,E122,E123,E124,E125,E126,E127,E128 --exclude $(PEP8EXCLUDE) . || true
+	@echo "-----------"
+	@echo "Ignored in PEP8 check:"
+	@echo $(PEP8EXCLUDE)
